Fixes #33311 - align host details cards

--- a/webpack/assets/javascripts/react_app/components/HostDetails/HostDetails.scss
+++ b/webpack/assets/javascripts/react_app/components/HostDetails/HostDetails.scss
@@ -11,4 +11,7 @@
 .host-details-tab-item {
   padding: 18px;
   background: #f0f0f0;
+  .pf-c-card {
+    height: 100%
+  }
 }
